# UV-trial

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  README.md  README_SEGMENTATION.md  实现总结.md
examples/: CMakeLists.txt  compare_uv.cpp  example_abf.cpp  example_curvature.cpp  example_edge_loop.cpp  example_geodesic.cpp  example_lscm.cpp  example_pipeline.cpp  example_xatlas.cpp  generate_uv_images.cpp  list_seams.cpp  perf_test.cpp  quick_seam_test.cpp  visualize_seams.cpp  visualize_uv.cpp
include/: uv_geodesic.h  uv_segmentation.h  uv_unwrapping.h  uvatlas_wrapper.h  xatlas_wrapper.h
scripts/: run_geodesic.sh  serve_visualizer.sh
src/: CMakeLists.txt  abf_unwrapping.cpp  advanced_segmentation.cpp  curvature_segmentation.cpp  edge_loop_segmentation.cpp  heat_geodesic.cpp  lscm_unwrapping.cpp  uvatlas_wrapper.cpp  xatlas_wrapper.cpp
test_results/: edge_loop_1.txt
visualization/: index.html  style.css  viewer.js
web/: README.md  SUMMARY.md  USAGE.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
web/src/: main.ts  style.css
web/src/core/three/: helpers.ts  loaders.ts  scene.ts
web/src/features/segmentation/: lassoOverlay.ts  linePreview.ts  meshGraph.ts  pathRenderer.ts  raycast.ts  store.ts  types.ts
web/src/workers/: heatWorker.ts  types.ts
